kubernetes/apps/media/ocis/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocis
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Service
    gethomepage.dev/name: OCIS
    gethomepage.dev/icon: ocis.png
    gethomepage.dev/description: ownCloud Infinite Scale
    external-dns.alpha.kubernetes.io/target: "external.cloudjur.com"
spec:
  ingressClassName: external
  rules:
    - host: &host "files.cloudjur.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                annotations:
                  io.cilium/lb-ipam-ips: 10.10.30.66
                name: ocis
                port:
                  number: 9200
  tls:
    - hosts:
        - *host
